<resources>
    <string name="app_name">Deteksi Dini Penyakit Diabetes Mellitus</string>
    <string name="judul_button">Masuk</string>
    <string name="SelamatDatang">SELAMAT DATANG DI APLIKASI DETEKSI DINI PENYAKIT DIABETES MELLITUS</string>
    <string name="Button1">Mulai Periksa</string>
    <string name="Button2">Referensi Data Pakar</string>
    <string name="Button3">Tentang Aplikasi</string>
    <string name="Pertanyaan20">Apakah mata anda mengalami peningkatan myopia atau hyperopia ?</string>
    <string name="ReferensiDataPakar1">Berikut ini penjelasan mengenai Diabetes Mellitus mulai dari definisi, klasaifikasi, faktor resiko, gejala-tanda, hingga komplikasi penyakit terhadap Diabetes Mellitus berdasarkan referensi ilmu pengetahuan kedokteran dan pengetahuan dokter mengenai Diabetes Mellitus :</string>
    <string name="ReferensiDataPakar2">1. Definisi Diabetes Mellitus, Diabetes Mellitus (DM) adalah suatu kumpulan gejala yang timbul pada seseorang yang disebabkan oleh karena adanya peningkatan kadar gula (glukosa) darah akibat kekurangan insulin baik absolut maupun relatif. Dalam proses metabolisme insulin memegang peranan yang sangat penting yaitu bertugas memasukkan glukosa ke dalam sel untuk selanjutnya dapat digunakan sebagai bahan bakar.</string>
    <string name="ReferensiDataPakar3">2. Klasifikasi Diabetes Mellitus</string>
    <string name="ReferensiDataPakar4">a. Diabetes Mellitus Tipe 1 (DMT1), DMT1 umumnya terjadi pada usia 0 sampai 25 tahun karena DMT1 merupakan penyakit genetik yang memungkinkan dapat diturunkan keturunan selanjutnya. DMT1 adalah penyakit gangguan metabolik yang ditandai kenaikan kadar gula darah akibat destruksi (kerusakan) sel beta pankreas (kelenjar ludah perut) karena suatu sebab tertentu yang menyebabkan produksi insulin tidak ada sama sekali dan akibat defect genetik fungsi sel beta pankreas dan defect genetik kinerja insulin sehingga penderita memerlukan tambahan insulin dari luar.</string>
    <string name="ReferensiDataPakar5">b. Diabetes Mellitus Tipe 2 (DMT2), DMT2 umumnya terjadi pada usia di atas 25 tahun karena DMT2 merupakan penyakit yang terjadi akibat pola hidup yang tidak sehat seperti jarang berolahraga, mengkonsumsi makanan – minuman tinggi gula dan lemak (makanan junk food, instan food dan makanan – minuman kemasan), kebiasaan merokok, kebiasaan minum minuman beralkohol, waktu tidur yang tidak normal (kurang dari 8 jam atau lebih dari 8 jam) dan lain – lain. DMT2 adalah penyakit gangguan metabolik yang ditandai kenaikan kadar gula darah akibat penurunan sekresi insulin oleh sel beta pankreas dan atau fungsi insulin (resistensi insulin).</string>
    <string name="ReferensiDataPakar6">3. Faktor Resiko Diabetes Mellitus, banyak faktor yang merupakan faktor resiko DM dan dapat dikelompokkan menjadi tiga kelompok yaitu sosiodemografi terdiri dari umur, jenis kelamin, tingkat pendidikan dan pekerjaan. Faktor perilaku dan gaya hidup seperti kebiasaan merokok, konsumsi alkohol dan aktivitas fisik. Keadaan klinis atau mental seperti indeks masa tubuh (kegemukan), lingkar pinggang (obesitas sentral) dan stres</string>
    <string name="ReferensiDataPakar7">4. Gejala - Tanda Diabetes Mellitus</string>
    <string name="ReferensiDataPakar8">Gejala merupakan keluhan subjektif apa yang dialami atau dirasakan oleh pasien sedangkan tanda merupakan ciri objektif apa yang dilihat oleh dokter pada pasien. Berikut ini gejala - tanda Diabetes Mellitus Tipe 1 dan 2 :</string>
    <string name="ReferensiDataPakar9">a. Gejala Diabetes Mellitus Tipe 1 (DMT1) yaitu Mengalami hipertensi atau tekanan darah tinggi biasanya emosi anda tidak bisa dikendalikan dan mengelurkan atau melepaskan emosi anda sangat berlebihan baik dari segi suara atau teriakan maupun dari segi aksi seperti memukul benda di sekitar anda dan sensitive terhadap perasaan yang gampang tersinggung dan gampang marah baik saat berada di lingkungan orang banyak maupun sedang sendiri (tekanan darah lebih dari atau sama dengan 140/90 mmHg), Banyak makan (untuk perempuan mengkonsumsi lebih dari 2000 kkal per hari dan untuk laki-laki lebih dari 2500 kkal per hari secara berkala atau rutin) tetapi berat badan tidak meningkat, Penurunan berat badan secara tiba-tiba, Mengalami gangguan masa pertumbuhan (pertumbuhan melambat dari segi tinggi badan dan berat badan yang tidak sesuai dengan usia anda), Mengalami autoimun (sistem kekebalan tubuh melemah sehingga mudah terserang penyakit seperti flu, batuk atau pilek, hal ini disebabkan karena kinerja sistem imun menurun).</string>
    <string name="ReferensiDataPakar10">b. Tanda Diabetes Mellitus Tipe 1 (DMT1) yaitu memiliki riwayat genetik Diabetes Mellitus, berada di lingkingan orang yang menderita Diabetes Mellitus, terdapat luka atau bisul yang sukar sembuh, usia 0 tahun sampai 25 tahun, memiliki riwayat genetik kardiovaskular (penyakit jantung) dan kencing manis (urine berwarna orange kecoklatan, semut mengerumuni urine saat urine dikeluarkan dan didiamkan hingga beberapa menit).</string>
    <string name="ReferensiDataPakar11">c. Gejala Diabetes Mellitus Tipe 2 (DMT2) yaitu sering buang air kecil atau polluria (buang air kecil lebih dari 5 kali per hari), sering haus atau banyak minum atau polidipsia (minum lebih dari 2.5 liter per liter), sering lapar atau banyak makan atau polifagia (mengonsumsi kalori lebih dari 3000 kkal per hari), banyak makan (mengonsumsi kalori lebih dari 3000 kkal per hari) tetapi tubuh lemah (kurangnya stamina untuk melakukan beberapa aktivitas) , tubuh cepat lelah (kurangnya semangat untuk melakukan beberapa aktivitas), rasa ngantuk yang berlebihan (menguap lebih dari 5 kali per hari), sering kesemutan (lebih dari 3 kali per hari), kulit terasa gatal, meningkatnya myopia atau hyperopia, mengalami disfungsi ereksi pada pria (ketidakmampuan mencapai atau mempertahankan ereksi dengan baik dalam berhubungan sekesual), berkurangnya gairah seks dan mengalami pruvitus vulva pada wanita.</string>
    <string name="ReferensiDataPakar12">d. Tanda Diabetes Mellitus Tipe 2 (DMT2) yaitu usia lebih dari 25 tahun, sprema cair pada pria, kegemukan (Body Mass Index = Berat Badan (kg) / Tinggi Badan (m), Body Mass Index lebih dari 23 kg/m), penuaan dini (kulit muncul keriput atau kulit terasa kusam yang tidak sesuai dengan usia anda), kurangnya aktifias fisik atau jarang berolahraga (membakar kalori kurang dari 1000 kkal), jarang mengonsumsi makanan dan minuman yang tinggi serat (kurang dari 800 kkal), kebiasaan merokok (mengonsumsi nikotin lebih dari 10 mg dan tar lebih dari 30 mg atau setara dengan 5 batang roko per hari secara berksla atau rutin) dan kebiasaan minum minuman beralkohol (mengonsumsi kadar alkohol lebih dari 40% per 7 hari secara berkala atau rutin)</string>
    <string name="ReferensiDataPakar13">5. Komplikasi Penyakit Terhadap Diabetes Mellitus</string>
    <string name="ReferensiDataPakar14">a. Komplikasi Akut Diabetes Mellitus yaitu :</string>
    <string name="ReferensiDataPakar15">*) Hipoglikemia merupakan penyebab terjadinya hipoglikemia adalah makan yang kurang dari aturan yang ditentukan, berat badan turun, sesudah olahraga, sesudah melahirkan, sembuh dari sakit dan pemberian suntikan insulin yang tidak tepat. Tanda-tanda hipoglikemia di bagi dalam beberapa stadium, pada stadium parasimpatik berupa lapar, mual, tekanan darah turun. Stadium gangguan otak ringan berupa lemah, lesu, sulit bicara dan kesulitan menghitung sederhana. Stadium simpatik berupa keringat dingin di muka terutama di hidung, bibir atau tangan dan berdebar-debar. Sedangkan pada stadium gangguan otak berat dapat berupa koma dengan atau tanpa kejang.</string>
    <string name="ReferensiDataPakar16">*) Hiperglicemia Ketoasidosis Diabetik merupakan defisiensi insulin berat dan akut dari suatu perjalanan penyakit DM. Timbulnya KAD merupakan ancaman kematian bagi penderita Diabetes Mellitus.</string>
    <string name="ReferensiDataPakar17">*) Hiperglicemia Non Ketonik ditandai dengan hiperglikemia berat non ketonik atau ketonik dan asidosis ringan. Pada keadaan lanjut dapat mengalami koma. Koma hiperosmolar hiperglikemik non ketonik adalah suatu sindrom yang ditandai hiperglikemik berat, hiperosmolar, dehidrasi berat tanpa ketoasidosis disertai dengan menurunnya kesadaran. Sindrom ini merupakan salah satu dari jenis koma non-ketoasidosis.</string>
    <string name="ReferensiDataPakar18">b. Komplikasi Kronik Diabetes Mellitus yaitu :</string>
    <string name="ReferensiDataPakar19">*) Masalah pada mata (retinopati) merupakan Penyebab kebutaan yang paling sering pada usia dewasa 20 sampai 74 tahun disebabkan karena retinopati diabetik. Risiko mengalami retinopati pada pasien diabetes meningkat sejalan dengan lamanya diabetes.</string>
    <string name="ReferensiDataPakar20">*) Penyakit jantung koroner merupakan Penyebab kematian utama pada pasien DM adalah penyakit jantung koroner yang merupakan salah satu penyulit makrovaskular pada DM. Penyulit makrovaskular ini bermanifestasi sebagai aterosklerosis dini yang dapat mengenai organ-organ vital seperti jantung dan otak.</string>
    <string name="ReferensiDataPakar21">*) Gangguan fungsi ginjal (nefropati) merupakan Nefropati diabetik adalah komplikasi pada Diabetes Mellitus dapat menyebabkan gangguan fungsi ginjal sehingga memerlukan tindakan cuci ginjal atau transplantasi ginjal.</string>
    <string name="ButtonHome2">Home</string>
    <string name="TentangAplikasi1">Biografi Pembuat Aplikasi</string>
    <string name="TentangAplikasi2">Nama : Leo Putra Simanjuntak </string>
    <string name="TentangAplikasi3">Tempat / Tanggal Lahir : Makassar, 16 Agustus 1997</string>
    <string name="TentangAplikasi4">Alamat : Jalan Kalijati Indah II No 21, Bandung</string>
    <string name="TentangAplikasi5">Pekerjaan : Mahasiswa</string>
    <string name="TentangAplikasi6">NIM : 1103144177</string>
    <string name="TentangAplikasi7">Jurusan Pendidikan : S1 Sistem Komputer</string>
    <string name="TentangAplikasi8">Universitas : Universitas Telkom</string>
    <string name="TentangAplikasi9">Alamat Email : leoputrasimanjuntak@gmail.com</string>
    <string name="TentangAplikasi10">Biografi Dokter</string>
    <string name="TentangAplikasi11">Nama : dr. Woro Hapsari Wahyuningrum, SpPK</string>
    <string name="TentangAplikasi12">Tempat / Tanggal Lahir : Boyolali, 19 Mei 1982</string>
    <string name="TentangAplikasi13">Alamat : Jalan Sukarajin II Blok Lemah Neundeut No 159, Bandung</string>
    <string name="TentangAplikasi14">Pekerjaan : Dokter</string>
    <string name="TentangAplikasi15">NIP : 19820519 200902 2 004</string>
    <string name="TentangAplikasi16">Instansi : RSUD Kesehatan Kerja Provinsi Jawa Barat</string>
    <string name="TentangAplikasi17">Alamat Email : worohapsariwahyuningrum@yahoo.co.id</string>
    <string name="TentangAplikasi18">Apikasi Deteksi Dini Penyakit Diabetes Mellitus Menggunakan Metode Sistem Pakar Forward chaining Berbasis Android bertujuan untuk masyarakat (pengguna aplikasi) tidak perlu mengeluarkan banyak biaya, waktu dan tenaga untuk memeriksa di rumah sakit serta masyarakat juga mengetahui dan memahami faktor bahaya, gejala - tanda dan komplikasi penyakit terhadap Diabetes Mellitus agar dapat mencegah dan menyadari apakah masyarakat termasuk kategori Diabetes Mellitus, Pre Diabetes Mellitus dan tidak Diabetes Mellitus, hasil kesimpulan tersebut akurat dan valid karena berdasarkan referensi ilmu pengetahuan kedokteran dan pengetahuan Dokter mengenai penyakit Diabetes Mellitus</string>
    <string name="ButtonHome3">Home</string>
</resources>